--- a/livres.html
+++ b/livres.html
@@ -4252,7 +4252,7 @@
       </figcaption>
     </figure>
 
-    <!--Livre 98-->
+    <!--Livre 98
     <figure>
       <a href="https://www.amazon.fr/Vernon-Subutex-1-Virginie-Despentes/dp/2253087661/ref=pd_sbs_sccl_3_2/257-9479405-0879257?pd_rd_w=3mBIo&content-id=amzn1.sym.d3b3d230-800e-44ee-b0fb-45d58210d92e&pf_rd_p=d3b3d230-800e-44ee-b0fb-45d58210d92e&pf_rd_r=QJSA8VH0S5WZWM6S3Z4N&pd_rd_wg=Ag3Id&pd_rd_r=cb7ebce6-8ebe-49cb-8019-38a995a395e2&pd_rd_i=2253087661&psc=1"
         target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/81SQuH5g6yL.jpg" alt="Vernon Subutex (Tome 1)" class="books" /></a>
@@ -4268,9 +4268,9 @@
       <figcaption>
         8,40€
       </figcaption>
-    </figure>
+    </figure>-->
 
-    <!--Livre 99-->
+    <!--Livre 99
     <figure>
       <a href="https://www.amazon.fr/Vernon-Subutex-2-Virginie-Despentes/dp/225308767X/ref=sr_1_2?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=3RPR80SM0X4MY&keywords=Virginie+Despentes+-+Vernon+Subutex&qid=1654193624&sprefix=virginie+despentes+-+vernon+subutex+1%2C+2%2C+3%2Caps%2C229&sr=8-2"
         target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/81x5VT0WLGL.jpg" alt="Vernon Subutex (Tome 2)" class="books" /></a>
@@ -4286,9 +4286,9 @@
       <figcaption>
         8,40€
       </figcaption>
-    </figure>
+    </figure>-->
 
-    <!--Livre 100-->
+    <!--Livre 100
     <figure>
       <a href="https://www.amazon.fr/Vernon-Subutex-3-Virginie-Despentes/dp/2253906727/ref=sr_1_4?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=3RPR80SM0X4MY&keywords=Virginie+Despentes+-+Vernon+Subutex&qid=1654193624&sprefix=virginie+despentes+-+vernon+subutex+1%2C+2%2C+3%2Caps%2C229&sr=8-4"
         target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/71TRTqN-H0L.jpg" alt="Vernon Subutex (Tome 3)" class="books" /></a>
@@ -4304,7 +4304,7 @@
       <figcaption>
         8,40€
       </figcaption>
-    </figure>
+    </figure>-->
   </div>
 
   <div class="booksLine">
