--- a/livres.html
+++ b/livres.html
@@ -5136,7 +5136,7 @@
   </div>
 
   <div class="booksLine">
-    <!--Livre 97-->
+    <!--Livre 97
     <figure>
       <a href="https://www.amazon.fr/Gang-Stories-Franck-Haderer/dp/2017101400/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=VUOXTUQN35DF&keywords=gang+stories&qid=1661859858&sprefix=gang+stories%2Caps%2C76&sr=8-1" target="_blank"> <img
           src="https://m.media-amazon.com/images/I/71eVLutgknL._SL1500_.jpg" alt="Gang Stories" class="books" /></a>
@@ -5149,7 +5149,7 @@
       <figcaption>
         29,95€
       </figcaption>
-    </figure>
+    </figure>-->
 
     <!--Livre 98-->
     <figure>
@@ -6143,7 +6143,7 @@
     <!--Livre 100-->
     <figure>
       <a href="https://www.amazon.fr/plus-dangereux-jeux-Richard-Connell/dp/2373852055/ref=sr_1_4?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=2Z1RI3Z2PFRTD&keywords=the+most+dangerous+game&qid=1698595478&sprefix=the+most+dangerous+game%2Caps%2C76&sr=8-4"
-        target="_blank"> <img src="https://m.media-amazon.com/images/W/MEDIAX_792452-T1/images/I/71MyqAH9gML._SL1131_.jpg" alt="Le plus dangereux des jeux" class="books" /></a>
+        target="_blank"> <img src="https://m.media-amazon.com/images/I/71MyqAH9gML._SL1131_.jpg" alt="Le plus dangereux des jeux" class="books" /></a>
       <figcaption>
         Richard Connell
       </figcaption>
@@ -6237,7 +6237,7 @@
       </figcaption>
     </figure>
 
-    <!--Livre 98-->
+    <!--Livre 98
     <figure>
       <a href="https://www.amazon.fr/Entretien-avec-cadavre-m%C3%A9decin-l%C3%A9giste/dp/2380759057/ref=tmm_pap_swatch_0?_encoding=UTF8&qid=&sr="
         target="_blank"> <img src="https://m.media-amazon.com/images/W/MEDIAX_849526-T1/images/I/81k5mpBl+rL._SL1500_.jpg" alt="Entretien avec un cadavre" class="books" /></a>
@@ -6250,7 +6250,7 @@
       <figcaption>
         Rupture de stock
       </figcaption>
-    </figure>
+    </figure>-->
 
     <!--Livre 99-->
     <figure>
