--- a/livres.html
+++ b/livres.html
@@ -36,7 +36,7 @@
       </figcaption>
     </figure>
 
-    <!--Livre 2-->
+    <!--Livre 2
     <figure>
       <a href="https://www.amazon.fr/Flic-Michel-NEYRET/dp/2259221440/ref=sr_1_1?keywords=michel+neyret&qid=1654178526&sprefix=michel+ne%2Caps%2C72&sr=8-1" target="_blank"> <img src="https://m.media-amazon.com/images/I/81-52BfDesL.jpg"
           alt="Souvenirs de la cour d'assises" class="books" /></a>
@@ -49,7 +49,7 @@
       <figcaption>
         2,00€
       </figcaption>
-    </figure>
+    </figure>-->
 
     <!--Livre 3-->
     <figure>
@@ -3005,7 +3005,7 @@
       </figcaption>
     </figure>
 
-    <!--Livre 100-->
+    <!--Livre 100
     <figure>
       <a href="https://www.amazon.fr/Langoisse-gardien-but-moment-penalty/dp/2070374076/ref=tmm_mmp_swatch_0?_encoding=UTF8&qid=1650504432&sr=8-1" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/91PeCK3YDML.jpg"
           alt="L'angoisse du gardien de but au moment du penalty" class="books" /></a>
@@ -3021,7 +3021,7 @@
       <figcaption>
         6,90€
       </figcaption>
-    </figure>
+    </figure>-->
   </div>
 
   <div class="booksLine">
@@ -6205,7 +6205,7 @@
       </figcaption>
     </figure>
 
-    <!--Livre 100-->
+    <!--Livre 100
     <figure>
       <a href="https://www.amazon.fr/Laffaire-Emmett-Till-Jean-Marie-Pottier/dp/2264083638/ref=pd_sim_d_sccl_3_4/259-1341521-5848809?pd_rd_w=c9xbd&content-id=amzn1.sym.55ef0fbe-0000-4194-b5f2-eb82b8cbc57c&pf_rd_p=55ef0fbe-0000-4194-b5f2-eb82b8cbc57c&pf_rd_r=KPJ656PQAQKB6EGVX0FG&pd_rd_wg=KFT2G&pd_rd_r=9cbce3ae-9b86-4b55-94e6-8013326f48c5&pd_rd_i=2264083638&psc=1"
         target="_blank"> <img src="https://m.media-amazon.com/images/I/715jfYZiHSL._SL1311_.jpg" alt="L'affaire Emmett Till" class="books" /></a>
@@ -6218,7 +6218,7 @@
       <figcaption>
         8,00€
       </figcaption>
-    </figure>
+    </figure>-->
   </div>
 
   <div class="booksLine">
