--- a/livres.html
+++ b/livres.html
@@ -373,7 +373,7 @@
       </figcaption>
     </figure>
 
-    <!--Livre 23-->
+    <!--Livre 23
     <figure>
       <a href="https://www.amazon.fr/Pens%C3%A9es-moi-m%C3%AAme-Suivi-Manuel-dEpict%C3%A8te/dp/2080700162/ref=tmm_mmp_swatch_0?_encoding=UTF8&qid=1650317835&sr=8-1" target="_blank"> <img
           src="https://images-na.ssl-images-amazon.com/images/I/61bbx8pwPBL.jpg" alt="Pensées pour moi-même, Suivi de Manuel d'Epictète" class="books" /></a>
@@ -386,7 +386,7 @@
       <figcaption>
         3,90€
       </figcaption>
-    </figure>
+    </figure>-->
 
     <!--Livre 24-->
     <figure>
@@ -541,7 +541,7 @@
   </div>
 
   <div class="booksLine">
-    <!--Livre 33-->
+    <!--Livre 33
     <figure>
       <a href="https://www.amazon.fr/Mea-Culpa-Gaspard-Proust/dp/2266339826/ref=tmm_mmp_swatch_0?_encoding=UTF8&qid=1673056484&sr=8-5" target="_blank"> <img src="https://m.media-amazon.com/images/I/51P5xYM-s7L.jpg" alt="Mea Culpa"
           class="books" /></a>
@@ -554,7 +554,7 @@
       <figcaption>
         7,70€
       </figcaption>
-    </figure>
+    </figure>-->
 
     <!--Livre 34-->
     <figure>
@@ -2390,7 +2390,7 @@
       </figcaption>
     </figure>
 
-    <!--Livre 114-->
+    <!--Livre 114
     <figure>
       <a href="https://www.amazon.fr/Ponce-Pilate-%C3%A9nigme-histoire-m%C3%A9moire/dp/2818506158/ref=tmm_mmp_swatch_0?_encoding=UTF8&qid=1650422532&sr=8-1" target="_blank"> <img src="https://m.media-amazon.com/images/I/51qCQR26heL.jpg"
           alt="Ponce Pilate" class="books" /></a>
@@ -2403,7 +2403,7 @@
       <figcaption>
         8,00€
       </figcaption>
-    </figure>
+    </figure>-->
 
     <!--Livre 115-->
     <figure>
@@ -2520,7 +2520,7 @@
       </figcaption>
     </figure>
 
-    <!--Livre 114-->
+    <!--Livre 114
     <figure>
       <a href="https://www.amazon.fr/disparition-Chandra-Levy-H%C3%A9l%C3%A8ne-Coutard/dp/2264083913/ref=sr_1_1?crid=1UP9HP0CEJ826&dib=eyJ2IjoiMSJ9.vYgBPDbA1ETXxxycOdX3WKQ7YDLdr4ggjM80Gw63Ny7GjHj071QN20LucGBJIEps.9D9_Ra2L-hSGZXliz0cAv9NxYiWbb4oR1o-9_a8LHM0&dib_tag=se&keywords=chandra+levy&qid=1720522613&sprefix=chandra+le%2Caps%2C80&sr=8-1" target="_blank"> <img src="https://m.media-amazon.com/images/I/71utiws9jxL._SL1311_.jpg"
           alt="La disparition de Chandra Levy" class="books" /></a>
@@ -2536,7 +2536,7 @@
       <figcaption>
         8,00€
       </figcaption>
-    </figure>
+    </figure>-->
 
     <!--Livre 115-->
     <figure>
@@ -5322,7 +5322,7 @@
   </div>
 
   <div class="booksLine">
-    <!--Livre 97-->
+    <!--Livre 97
     <figure>
       <a href="https://www.amazon.fr/Chagrin-dhumour-S%C3%A9bastien-Thoen/dp/B0B4ZXG99C/ref=tmm_pap_swatch_0?_encoding=UTF8&qid=1699462808&sr=8-1" target="_blank"> <img src="https://m.media-amazon.com/images/I/81wzbcDMQ9L.jpg" alt="Chagrin d'humour"
           class="books" /></a>
@@ -5335,7 +5335,7 @@
       <figcaption>
         18,90€
       </figcaption>
-    </figure>
+    </figure>-->
 
     <!--Livre 98-->
     <figure>
