--- a/livres.html
+++ b/livres.html
@@ -4580,7 +4580,7 @@
 
     <!--Livre 98-->
     <figure>
-      <a href="https://www.amazon.fr/Co%C3%BBt-vie-Deborah-Levy/dp/2364684544/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=FA3311TKFFY8&keywords=Deborah+Levy+-+Le+co%C3%BBt+de+la+vie&qid=1654193803&sprefix=deborah+levy+-+le+co%C3%BBt+de+la+vie%2Caps%2C231&sr=8-1"
+      <a href="https://www.amazon.fr/Co%C3%BBt-vie-Deborah-Levy/dp/2364687128/ref=tmm_mmp_swatch_0?_encoding=UTF8&qid=1654193803&sr=8-1"
         target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/51uK7Zo+TPS.jpg" alt="Le Coût de la vie" class="books" /></a>
       <figcaption>
         Deborah Levy
@@ -4589,13 +4589,13 @@
         Le Coût de la vie
       </figcaption>
       <figcaption>
-        16,50€
+        8,70€
       </figcaption>
     </figure>
 
     <!--Livre 99-->
     <figure>
-      <a href="https://www.amazon.fr/Ce-que-veux-pas-savoir/dp/2364684501/ref=sr_1_3?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=FA3311TKFFY8&keywords=Deborah+Levy+-+Le+co%C3%BBt+de+la+vie&qid=1654193803&sprefix=deborah+levy+-+le+co%C3%BBt+de+la+vie%2Caps%2C231&sr=8-3"
+      <a href="https://www.amazon.fr/Ce-que-veux-pas-savoir/dp/236468711X/ref=tmm_mmp_swatch_0?_encoding=UTF8&qid=1654193803&sr=8-3"
         target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/61jYYwvGSCL.jpg" alt="Ce que je ne veux pas savoir" class="books" /></a>
       <figcaption>
         Deborah Levy
@@ -4604,7 +4604,7 @@
         Ce que je ne veux pas savoir
       </figcaption>
       <figcaption>
-        16,50€
+        8,50€
       </figcaption>
     </figure>
 
@@ -5097,7 +5097,7 @@
 
     <!--Livre 99-->
     <figure>
-      <a href="https://www.amazon.fr/Splendeur-lInfamie-Erik-LARSON/dp/2749157382/ref=sr_1_1?keywords=la+splendeur+et+l%27infamie&qid=1661859826&sprefix=la+splen%2Caps%2C89&sr=8-1" target="_blank"> <img
+      <a href="https://www.amazon.fr/Splendeur-linfamie-Erik-Larson/dp/2253195642/ref=tmm_mmp_swatch_0?_encoding=UTF8&qid=1661859826&sr=8-1" target="_blank"> <img
           src="https://m.media-amazon.com/images/I/517ISYfZZ3S._SL1200_.jpg" alt="La Splendeur et l'Infamie" class="books" /></a>
       <figcaption>
         Erik Larson
@@ -5106,7 +5106,7 @@
         La Splendeur et l'Infamie
       </figcaption>
       <figcaption>
-        24,90€
+        9,90€
       </figcaption>
     </figure>
 
@@ -5129,8 +5129,8 @@
   <div class="booksLine">
     <!--Livre 97-->
     <figure>
-      <a href="https://www.amazon.fr/Gang-Stories-Franck-Haderer/dp/2017101400/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=VUOXTUQN35DF&keywords=gang+stories&qid=1661859858&sprefix=gang+stories%2Caps%2C76&sr=8-1" target="_blank"> <img
-          src="https://m.media-amazon.com/images/I/71eVLutgknL._SL1500_.jpg" alt="Gang Stories" class="books" /></a>
+      <a href="https://www.amazon.fr/Shining-Stephen-King/dp/2253151629/ref=sr_1_3?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=1VYL0M4WV6M8T&dib=eyJ2IjoiMSJ9.mmyuLGAd8ft9Iza5b2QvhmIDycpukHdOQ-2tj6O-VuWB6mNBsvNxXWEE58Ts5enGDkAF-lv47Pu--SA9RPlJBM7UkRR2Zwqh-HoKg85WznAmmtkFPMOpMWCDO5IbJ6mNMxtQdvnmfyUl511pfIs7xmoep2BgLOXcYL9VAwbqlOJg0LnYNQEL8oxiV1UD3VzSzEShPidAVBVaD4FRIov8JBvMF4FtbiUfqIVbvGsy8t4tMx4fSblufIqyTHkUsQfpvpgYLyzWOmWmnNmaoT3JBC0fYJ5R6K6Zir2gv9-SEnA.X7ubmyTx1xXA8Vcp9xjHEfWGkTHN8lPU1ZtF8D6DGds&dib_tag=se&keywords=shining&qid=1724424040&sprefix=shining%2Caps%2C125&sr=8-3" target="_blank"> <img
+          src="https://c.media-amazon.com/images/I/81imcWAv6SL._SL1500_.jpg" alt="Shining" class="books" /></a>
       <figcaption>
         Stephen King
       </figcaption>
@@ -5268,7 +5268,7 @@
 
     <!--Livre 98-->
     <figure>
-      <a href="https://www.amazon.fr/V13-Chronique-judiciaire-Emmanuel-Carr%C3%A8re/dp/2818056063/ref=tmm_pap_swatch_0?_encoding=UTF8&qid=1664226672&sr=1-1" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/61DeFRXP8fL.jpg"
+      <a href="https://www.amazon.fr/V13-Chronique-judiciaire-Emmanuel-Carr%C3%A8re/dp/2073045332/ref=tmm_mmp_swatch_0?_encoding=UTF8&qid=1664226672&sr=1-1" target="_blank"> <img src="https://c.media-amazon.com/images/I/71KizpFupzL._SL1051_.jpg"
           alt="V13: Chronique judiciaire" class="books" /></a>
       <figcaption>
         Emmanuel Carrère
@@ -5277,14 +5277,14 @@
         V13: Chronique judiciaire
       </figcaption>
       <figcaption>
-        22,00€
+        8,90€
       </figcaption>
     </figure>
 
     <!--Livre 99-->
     <figure>
-      <a href="https://www.amazon.fr/Londres-Louis-Ferdinand-C%C3%A9line/dp/2072983371/ref=d_msx_wsirn_v1_sccl_2_23/262-3250571-8146649?pd_rd_w=bP8hb&content-id=amzn1.sym.a1965795-09f3-4ed4-b0c1-5fdecd0f37af&pf_rd_p=a1965795-09f3-4ed4-b0c1-5fdecd0f37af&pf_rd_r=EZJ0YPQ8XMHVM062V1G0&pd_rd_wg=huM7d&pd_rd_r=45081859-7a0a-4529-9cd1-94fd831b325b&pd_rd_i=2072983371&psc=1"
-        target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/31BqudqWmGL.jpg" alt="Londres" class="books" /></a>
+      <a href="https://www.amazon.fr/Londres-Louis-Ferdinand-C%C3%A9line/dp/2073050441/ref=tmm_mmp_swatch_0?_encoding=UTF8&qid=&sr="
+        target="_blank"> <img src="https://c.media-amazon.com/images/I/81Mcc-GMIQL._SL1500_.jpg" alt="Londres" class="books" /></a>
       <figcaption>
         Louis-Ferdinand Céline
       </figcaption>
@@ -5292,7 +5292,7 @@
         Londres
       </figcaption>
       <figcaption>
-        24,00€
+        10,40€
       </figcaption>
     </figure>
 
@@ -5348,8 +5348,8 @@
 
     <!--Livre 99-->
     <figure>
-      <a href="https://www.amazon.fr/mage-du-Kremlin-Giuliano-Empoli/dp/2072958164/ref=d_msx_wsirn_v1_sccl_2_44/257-0666022-3977509?pd_rd_w=r0fIB&content-id=amzn1.sym.a1965795-09f3-4ed4-b0c1-5fdecd0f37af&pf_rd_p=a1965795-09f3-4ed4-b0c1-5fdecd0f37af&pf_rd_r=6BNTBRR34JR70BZKQPKB&pd_rd_wg=o0vRB&pd_rd_r=8b1f393e-e24f-4148-a716-e1e723a7aff1&pd_rd_i=2072958164&psc=1"
-        target="_blank"> <img src="https://m.media-amazon.com/images/I/61sGjf4h++L.jpg" alt="Le mage du Kremlin" class="books" /></a>
+      <a href="https://www.amazon.fr/Mage-Du-Kremlin-Roman/dp/2073003915/ref=tmm_mmp_swatch_0?_encoding=UTF8&qid=&sr="
+        target="_blank"> <img src="https://c.media-amazon.com/images/I/718idCs5tkL._SL1500_.jpg" alt="Le mage du Kremlin" class="books" /></a>
       <figcaption>
         Giuliano Da Empoli
       </figcaption>
@@ -5357,7 +5357,7 @@
         Le mage du Kremlin
       </figcaption>
       <figcaption>
-        20,00€
+        8,90€
       </figcaption>
     </figure>
 
@@ -5394,8 +5394,8 @@
 
     <!--Livre 98-->
     <figure>
-      <a href="https://www.amazon.fr/Seul-lespoir-apaise-douleur-Simone/dp/2080415271/ref=sr_1_1?crid=21VMITNFGQ5SH&keywords=seul+l%27espoir+apaise+la+douleur&qid=1668301065&qu=eyJxc2MiOiIwLjAwIiwicXNhIjoiMC4wMCIsInFzcCI6IjAuMDAifQ%3D%3D&sprefix=seul+l%27esp%2Caps%2C73&sr=8-1"
-        target="_blank"> <img src="https://m.media-amazon.com/images/I/61mFuikXQ8L.jpg" alt="Seul l'espoir apaise la douleur" class="books" /></a>
+      <a href="https://www.amazon.fr/Seul-lespoir-apaise-douleur-Simone/dp/2290390682/ref=tmm_mmp_swatch_0?_encoding=UTF8&qid=1668301065&sr=8-1"
+        target="_blank"> <img src="https://c.media-amazon.com/images/I/51-IPk76sZL._SL1051_.jpg" alt="Seul l'espoir apaise la douleur" class="books" /></a>
       <figcaption>
         Simone Veil
       </figcaption>
@@ -5403,7 +5403,7 @@
         Seul l'espoir apaise la douleur
       </figcaption>
       <figcaption>
-        19,00€
+        7,60€
       </figcaption>
     </figure>
 
@@ -5427,8 +5427,8 @@
 
     <!--Livre 100-->
     <figure>
-      <a href="https://www.amazon.fr/Au-del%C3%A0-simple-ordre-Jordan-Peterson/dp/2749944872/ref=sr_1_3?keywords=jordan+b+peterson&qid=1668301092&qu=eyJxc2MiOiIyLjkzIiwicXNhIjoiMi43NiIsInFzcCI6IjIuNzcifQ%3D%3D&sprefix=jordan+b+pe%2Caps%2C82&sr=8-3"
-        target="_blank"> <img src="https://m.media-amazon.com/images/I/61LWT3CvmxL.jpg" alt="12 règles pour une vie" class="books" /></a>
+      <a href="https://www.amazon.fr/nouvelles-r%C3%A8gles-pour-au-del%C3%A0-lordre/dp/2290397741/ref=tmm_mmp_swatch_0?_encoding=UTF8&qid=1668301092&sr=8-3"
+        target="_blank"> <img src="https://c.media-amazon.com/images/I/71zvJJcZ5QL._SL1051_.jpg" alt="12 règles pour une vie" class="books" /></a>
       <figcaption>
         Jordan B. Peterson
       </figcaption>
@@ -5439,7 +5439,7 @@
         vie au-delà de l'ordre
       </figcaption>
       <figcaption>
-        19,95€
+        8,90€
       </figcaption>
     </figure>
   </div>
@@ -5447,8 +5447,8 @@
   <div class="booksLine">
     <!--Livre 97-->
     <figure>
-      <a href="https://www.amazon.fr/Faites-entrer-lacquitt%C3%A9-quelques-criminels/dp/2221263243/ref=sr_1_1?keywords=faites+entrer+l%27acquitt%C3%A9&qid=1669079428&qu=eyJxc2MiOiIwLjAwIiwicXNhIjoiMC4wMCIsInFzcCI6IjAuMDAifQ%3D%3D&s=books&sprefix=faites+entrer%2Cstripbooks%2C70&sr=1-1"
-        target="_blank"> <img src="https://m.media-amazon.com/images/I/71Wf80sRp0L.jpg" alt="Faites entrer l'acquitté" class="books" /></a>
+      <a href="https://www.amazon.fr/Faites-entrer-lacquitt%C3%A9-quelques-criminels/dp/2266336355/ref=tmm_mmp_swatch_0?_encoding=UTF8&qid=1669079428&sr=1-1"
+        target="_blank"> <img src="https://c.media-amazon.com/images/I/61HsmBK4ppL._SL1311_.jpg" alt="Faites entrer l'acquitté" class="books" /></a>
       <figcaption>
         Gilbert Thiel
       </figcaption>
@@ -5456,14 +5456,14 @@
         Faites entrer l'acquitté
       </figcaption>
       <figcaption>
-        22,00€
+        8,60€
       </figcaption>
     </figure>
 
     <!--Livre 98-->
     <figure>
-      <a href="https://www.amazon.fr/Performance-Prix-Renaudot-Simon-Liberati/dp/224682267X/ref=d_msx_wsirn_v1_sccl_2_3/257-0666022-3977509?pd_rd_w=nbx38&content-id=amzn1.sym.a1965795-09f3-4ed4-b0c1-5fdecd0f37af&pf_rd_p=a1965795-09f3-4ed4-b0c1-5fdecd0f37af&pf_rd_r=R3CWZF4PP6CT5JWEZ6TT&pd_rd_wg=ZxAAW&pd_rd_r=0276e8c5-3787-411d-b020-5b5913eec5ad&pd_rd_i=224682267X&psc=1"
-        target="_blank"> <img src="https://m.media-amazon.com/images/I/51Chq4iDkWL.jpg" alt="Performance" class="books" /></a>
+      <a href="https://www.amazon.fr/Performance-Simon-Liberati/dp/2253245151/ref=tmm_mmp_swatch_0?_encoding=UTF8&qid=&sr="
+        target="_blank"> <img src="https://c.media-amazon.com/images/I/91pA0DKRHiL._SL1500_.jpg" alt="Performance" class="books" /></a>
       <figcaption>
         Simon Liberati
       </figcaption>
@@ -5471,7 +5471,7 @@
         Performance
       </figcaption>
       <figcaption>
-        20,00€
+        7,90€
       </figcaption>
     </figure>
 
@@ -5539,7 +5539,7 @@
 
     <!--Livre 99-->
     <figure>
-      <a href="https://www.amazon.fr/Mangez-vous-voulez-Jean-TEUL%C3%89/dp/226001772X/ref=tmm_pap_swatch_0?_encoding=UTF8&qid=1669746407&sr=8-1" target="_blank"> <img src="https://m.media-amazon.com/images/I/71LZ60oEMRL.jpg"
+      <a href="https://www.amazon.fr/Mangez-vous-voulez-Jean-TEUL%C3%89/dp/2266198467/ref=tmm_mmp_swatch_0?_encoding=UTF8&qid=1669746407&sr=8-1" target="_blank"> <img src="https://c.media-amazon.com/images/I/61LS2i89K3L._SL1311_.jpg"
           alt="Mangez-le si vous voulez" class="books" /></a>
       <figcaption>
         Jean Teulé
@@ -5548,7 +5548,7 @@
         Mangez-le si vous voulez
       </figcaption>
       <figcaption>
-        17,50€
+        6,00€
       </figcaption>
     </figure>
 
@@ -5781,7 +5781,7 @@
 
     <!--Livre 98-->
     <figure>
-      <a href="https://www.amazon.fr/Histoire-du-36-Quai-Orf%C3%A8vres/dp/2372541161/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=3E4AUOQSEMAA&keywords=claude+cances&qid=1685276025&sprefix=claude+cances%2Caps%2C77&sr=8-1"
+      <a href="https://www.amazon.fr/Histoire-36-quai-orf%C3%A8vres-Nouvelle/dp/237254280X/ref=tmm_pap_swatch_0?_encoding=UTF8&qid=1685276025&sr=8-1"
         target="_blank"> <img src="https://m.media-amazon.com/images/I/91EmxHZf57L.jpg" alt="Histoire du 36 Quai des Orfèvres" class="books" /></a>
       <figcaption>
         Claude Cancès
@@ -5923,7 +5923,7 @@
 
     <!--Livre 99-->
     <figure>
-      <a href="https://www.amazon.fr/Dictionnaire-amoureux-divers-Didier-DECOIN/dp/2259212069/ref=tmm_pap_swatch_0?_encoding=UTF8&qid=1688404719&sr=8-2" target="_blank"> <img src="https://m.media-amazon.com/images/I/61K6rhR56CL.jpg"
+      <a href="https://www.amazon.fr/Dictionnaire-amoureux-divers-Didier-Decoin/dp/2259310389/ref=tmm_mmp_swatch_0?_encoding=UTF8&qid=1688404719&sr=8-2" target="_blank"> <img src="https://m.media-amazon.com/images/I/61K6rhR56CL.jpg"
           alt="Dictionnaire amoureux des Faits divers" class="books" /></a>
       <figcaption>
         Didier Decoin
@@ -5935,7 +5935,7 @@
         des Faits divers
       </figcaption>
       <figcaption>
-        24,00€
+        13,00€
       </figcaption>
     </figure>
 
