--- a/livres.html
+++ b/livres.html
@@ -591,7 +591,7 @@
 
     <!--Livre 36-->
     <figure>
-      <a href="https://www.amazon.fr/longue-route-Seul-entre-ciels/dp/229004203X/ref=tmm_mmp_swatch_0?_encoding=UTF8&qid=1559692004&sr=8-1" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/61HBwnGKNwL.jpg"
+      <a href="https://www.amazon.fr/Longue-route-Bernard-Moitessier/dp/2290305820/ref=tmm_mmp_swatch_0?_encoding=UTF8&qid=1559692004&sr=8-1" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/61HBwnGKNwL.jpg"
           alt="La longue route : Seul entre mers et ciels" class="books" /></a>
       <figcaption>
         Bernard Moitessier
@@ -671,7 +671,7 @@
   </div>
 
   <div class="booksLine">
-    <!--Livre 41-->
+    <!--Livre 41
     <figure>
       <a href="https://www.amazon.fr/Diams-autobiographie-Melanie-Georgiades/dp/2757835661/ref=tmm_mmp_swatch_0?_encoding=UTF8&qid=1560875298&sr=8-1" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/51I%2BiF81yIL.jpg"
           alt="Diam's, autobiographie" class="books" /></a>
@@ -684,9 +684,9 @@
       <figcaption>
         8,00€
       </figcaption>
-    </figure>
+    </figure>-->
 
-    <!--Livre 42-->
+    <!--Livre 42
     <figure>
       <a href="https://www.amazon.fr/M%C3%A9lanie-Fran%C3%A7aise-musulmane-Melanie-Georgiades/dp/2757859080/ref=tmm_mmp_swatch_0?_encoding=UTF8&qid=1560875298&sr=8-3" target="_blank"> <img
           src="https://images-na.ssl-images-amazon.com/images/I/61A2pW2mDCL.jpg" alt="Mélanie, Française et musulmane" class="books" /></a>
@@ -702,7 +702,7 @@
       <figcaption>
         7,20€
       </figcaption>
-    </figure>
+    </figure>-->
 
     <!--Livre 43-->
     <figure>
@@ -1097,8 +1097,8 @@
 
     <!--Livre 67-->
     <figure>
-      <a href="https://www.amazon.fr/bri%C3%A8vet%C3%A9-vie-S%C3%A9n%C3%A8que-%C3%A9dition-int%C3%A9grale/dp/B08FV57F2H/ref=tmm_pap_swatch_0?_encoding=UTF8&qid=&sr=" target="_blank"> <img
-          src="https://images-na.ssl-images-amazon.com/images/I/619bRBiCxzL.jpg" alt="De la brièveté de la vie" class="books" /></a>
+      <a href="https://www.amazon.fr/bri%C3%A8vet%C3%A9-vie-S%C3%A9n%C3%A8que/dp/2755508353/ref=sr_1_1?crid=2S7XTVMC00TII&dib=eyJ2IjoiMSJ9.JDTEevpJb4HDjmzGcjtoNUmy_0r5eF-qfHQcbuMqtPxuHAzduWxBpeKT1aL9HPN8Mkbx8d4y_wCgTg6YdEN6iDaXYGbri_eC4BkLK3q8UqC93shk90yjW0idABkfaWHHyEGgES-vRF1D9sIadiTy4se98FNlNBL-K9xHBLH6tdv94DROvaF0hsbvgggAi72sRTc7iRW--T_TtbBMTf_hOH4MH44lLouALRMA8ykik2WXRtcH9oJlVj5H1RmVVrmZQAAhB07v8aokTyi58-8GLvZqoIqirIxwwoeeGFIFOmQ.hKQPtqS5qKSZ-owOb1_GuKReZKHtrUUyn4whMwEZhuc&dib_tag=se&keywords=de+la+brievete+de+la+vie+seneque&qid=1724684409&sprefix=brieve%2Caps%2C85&sr=8-1" target="_blank"> <img
+          src="https://c.media-amazon.com/images/I/71GKaMMl-sL._SL1500_.jpg" alt="De la brièveté de la vie" class="books" /></a>
       <figcaption>
         Sénèque
       </figcaption>
@@ -1106,7 +1106,7 @@
         De la brièveté de la vie
       </figcaption>
       <figcaption>
-        5,90€
+        3,00€
       </figcaption>
     </figure>
 
@@ -1380,8 +1380,8 @@
 
     <!--Livre 84-->
     <figure>
-      <a href="https://www.amazon.fr/M%C3%A9moires-flous-Jim-Carrey/dp/2021471128/ref=sr_1_18?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&dchild=1&keywords=jim+carrey&qid=1623591475&sr=8-18" target="_blank"> <img
-          src="https://images-na.ssl-images-amazon.com/images/I/61hrgr9nyDL.jpg" alt="Jim Carrey" class="books" /></a>
+      <a href="https://www.amazon.fr/M%C3%A9moires-flous-Jim-Carrey/dp/275789434X/ref=tmm_mmp_swatch_0?_encoding=UTF8&qid=1623591475&sr=8-18" target="_blank"> <img
+          src="https://c.media-amazon.com/images/I/81cRQpWKzvL._SL1500_.jpg" alt="Jim Carrey" class="books" /></a>
       <figcaption>
         Jim Carrey
       </figcaption>
@@ -1389,7 +1389,7 @@
         Mémoires flous
       </figcaption>
       <figcaption>
-        19,00€
+        8,60€
       </figcaption>
     </figure>
   </div>
@@ -1444,7 +1444,7 @@
 
     <!--Livre 84-->
     <figure>
-      <a href="https://www.amazon.fr/Prince-Machiavel-%C3%A9dition-originale/dp/B08C97TF6N/ref=tmm_pap_swatch_0?_encoding=UTF8&qid=1650317896&sr=8-1" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/615kk1H5QvL.jpg"
+      <a href="https://www.amazon.fr/Prince-Machiavel-%C3%89dition-compl%C3%A8te-originale/dp/B08SBDX8SQ/ref=sr_1_1?crid=15DGAZMLTX4PW&dib=eyJ2IjoiMSJ9.NSv8qu2FOvvz-QaIGFhV1yj--axusWkaHsE3FapRRkAPeBpnxt5_uJb6SvyyWRhB2rnIo80iqRW27nOtKGmDE_vdbvsTNprP-CRXz86JEJi0ZrmU5trMM_q4Ax3TMPHBAz360v_riQYucq3oCMaHyg0YBzktGO34cQgw9VGYrmy268iL6cHZuVf2dyy6kpp-HDWxC5f5HhZNsstwEli4aXGKHz9M78ZTkXj4VSULHOW6NnGz1v1WBSGrBNvb1AyrkF6trc4m1JvsF-o6T_Lrpl3tw4yxqQwb13-K6x60V_Y.Cuib7W_2lnCJ9eoRDqaNZPTUfYgrq66c13S37zojYQo&dib_tag=se&keywords=le+prince+de+machiavel&qid=1724684298&sprefix=prince+mac%2Caps%2C84&sr=8-1" target="_blank"> <img src="https://c.media-amazon.com/images/I/61T6S5V8rKL._SL1500_.jpg"
           alt="Le Prince" class="books" /></a>
       <figcaption>
         Nicolas Machiavel
@@ -1453,7 +1453,7 @@
         Le Prince
       </figcaption>
       <figcaption>
-        5,90€
+        6,99€
       </figcaption>
     </figure>
   </div>
@@ -1801,7 +1801,7 @@
 
     <!--Livre 106-->
     <figure>
-      <a href="https://www.amazon.fr/Carnet-rancunes-Jacques-Expert/dp/2702184685/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=MVBQTVQQ34WL&keywords=Jacques+Expert+-+Le+carnet+des+rancunes&qid=1650636230&s=books&sprefix=jacques+expert+-+le+carnet+des+rancunes%2Cstripbooks%2C120&sr=1-1"
+      <a href="https://www.amazon.fr/Carnet-rancunes-Jacques-Expert/dp/2253940232/ref=tmm_mmp_swatch_0?_encoding=UTF8&qid=1650636230&sr=1-1"
         target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/81V9592QhGL.jpg" alt="Le Carnet des rancunes" class="books" /></a>
       <figcaption>
         Jacques Expert
@@ -1810,7 +1810,7 @@
         Le Carnet des rancunes
       </figcaption>
       <figcaption>
-        19,90€
+        8,90€
       </figcaption>
     </figure>
 
@@ -2207,20 +2207,23 @@
       </figcaption>
     </figure>
 
-    <!--Livre 115
+    <!--Livre 115-->
     <figure>
-      <a href="https://www.amazon.fr/L%C3%A9ducation-sentimentale-Gustave-Flaubert/dp/2253010693/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=JN2OVE450OG7&keywords=education+sentimentale+poche&qid=1650317380&sprefix=education+sentimentale+poche%2Caps%2C55&sr=8-1"
-        target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/81NErbd-ePL.jpg" alt="L'Education sentimentale" class="books" /></a>
+      <a href="https://www.amazon.fr/d%C3%A9sinvolture-est-bien-belle-chose/dp/2080427296/ref=sr_1_1?crid=2KVTEPRT3NO2U&dib=eyJ2IjoiMSJ9.YX7Kjc-HcFhBauLZB4r0jnWnjXX8BqDgENJuzU6qBF4.jxU_6bsH4MgR16PxRtWF4IaOEnSYhXO52B2DeWgNaJo&dib_tag=se&keywords=la+d%C3%A9sinvolture+est+une+bien+belle+chose&qid=1724684799&sprefix=la+d%C3%A9sinvo%2Caps%2C85&sr=8-1"
+        target="_blank"> <img src="https://c.media-amazon.com/images/I/81MP+bQyLxL._SL1299_.jpg" alt="La désinvolture est une bien belle chose" class="books" /></a>
       <figcaption>
-        Gustave Flaubert
+        Philippe Jaenada
       </figcaption>
       <figcaption>
-        L'Education sentimentale
+        La désinvolture est
       </figcaption>
       <figcaption>
-        4,90€
+        une bien belle chose
       </figcaption>
-    </figure>-->
+      <figcaption>
+        22,00€
+      </figcaption>
+    </figure>
 
     <!--Livre 116-->
     <figure>
@@ -3116,7 +3119,7 @@
 
     <!--Livre 98-->
     <figure>
-      <a href="https://www.amazon.fr/Panique-g%C3%A9n%C3%A9rale-James-Ellroy/dp/2743656468/ref=tmm_pap_swatch_0?_encoding=UTF8&qid=1650591559&sr=8-1" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/31qbnPd3zQL.jpg"
+      <a href="https://www.amazon.fr/Panique-g%C3%A9n%C3%A9rale-James-Ellroy/dp/274366410X/ref=tmm_mmp_swatch_0?_encoding=UTF8&qid=1650591559&sr=8-1" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/31qbnPd3zQL.jpg"
           alt="Panique générale" class="books" /></a>
       <figcaption>
         James Ellroy
@@ -3125,7 +3128,7 @@
         Panique générale
       </figcaption>
       <figcaption>
-        23,00€
+        10,50€
       </figcaption>
     </figure>
 
@@ -3287,7 +3290,7 @@
   <div class="booksLine">
     <!--Livre 97-->
     <figure>
-      <a href="https://www.amazon.fr/Sambre-Alice-G%C3%A9raud/dp/2709666308/ref=pd_ci_mcx_mh_wsixn_v2_1?pd_rd_w=Snc1s&content-id=amzn1.sym.0346141b-bb3e-4345-acf3-620937a4fc3a&pf_rd_p=0346141b-bb3e-4345-acf3-620937a4fc3a&pf_rd_r=N56G17EGMKJ0N8EV30SX&pd_rd_wg=vGnIy&pd_rd_r=0a2b2999-acf2-4889-96c8-327bb754a025&pd_rd_i=2709666308"
+      <a href="https://www.amazon.fr/Sambre-Alice-G%C3%A9raud/dp/2253247634/ref=tmm_mmp_swatch_0?_encoding=UTF8&qid=&sr="
         target="_blank"> <img src="https://m.media-amazon.com/images/I/81tsrX8PC7L.jpg" alt="Sambre: Radioscopie d'un fait divers" class="books" /></a>
       <figcaption>
         Alice Géraud
@@ -3299,7 +3302,7 @@
         d'un fait divers
       </figcaption>
       <figcaption>
-        21,50€
+        9,40€
       </figcaption>
     </figure>
 
@@ -3556,7 +3559,7 @@
 
     <!--Livre 98-->
     <figure>
-      <a href="https://www.amazon.fr/dAuschwitz-lincroyable-histoire-dAlfred-Nakache/dp/2809844550/ref=sr_1_1?keywords=le+nageur+d%27auschwitz&qid=1653702478&sprefix=le+nageur+d%27ausch%2Caps%2C65&sr=8-1" target="_blank"> <img
+      <a href="https://www.amazon.fr/nageur-dAuschwitz-Renaud-Leblond/dp/2290389781/ref=tmm_mmp_swatch_0?_encoding=UTF8&qid=1653702478&sr=8-1" target="_blank"> <img
           src="https://images-na.ssl-images-amazon.com/images/I/71DIcQ1Wx5L.jpg" alt="Le Nageur d'Auschwitz" class="books" /></a>
       <figcaption>
         Renaud Leblond
@@ -3565,7 +3568,7 @@
         Le Nageur d'Auschwitz
       </figcaption>
       <figcaption>
-        18,00€
+        7,60€
       </figcaption>
     </figure>
 
@@ -4207,7 +4210,7 @@
 
     <!--Livre 99-->
     <figure>
-      <a href="https://www.amazon.fr/belle-na-pas-sommeil/dp/2021363325/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=3FKEH51B2KE73&keywords=Eric+Holder+-+La+belle+n%27a+pas+sommeil&qid=1654193470&sprefix=xavier+de+maistre+-+voyage+autour+de+ma+chambre%2Caps%2C234&sr=8-1"
+      <a href="https://www.amazon.fr/Belle-na-pas-sommeil/dp/2757875183/ref=tmm_mmp_swatch_0?_encoding=UTF8&qid=1654193470&sr=8-1"
         target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/71uOGP7yFRL.jpg" alt="La belle n'a pas sommeil" class="books" /></a>
       <figcaption>
         Eric Holder
@@ -4216,7 +4219,7 @@
         La belle n'a pas sommeil
       </figcaption>
       <figcaption>
-        18,00€
+        7,10€
       </figcaption>
     </figure>
 
